tests/lean/autoBoundPostponeLoop.lean
theorem ex
     (h₁ : α = β)
     (as : List α)
     (bs : List β)
     (h₂ : (h ▸ as) = bs)
     : True :=
  True.intro
